--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "client",
   "version": "1.0.0",
-  "description": "BizIntel client - AI Business Management Assistant",
+  "description": "BizIntel - AI Business Management Assistant",
   "main": "index.js",
   "directories": {
     "lib": "lib"
@@ -18,8 +18,10 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-radio-group": "^1.2.3",
+    "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@tailwindcss/postcss": "^4.0.15",
     "axios": "^1.6.2",
