--- a/server/.gitignore
+++ b/server/.gitignore
@@ -6,6 +6,7 @@ node_modules/
 # Build output
 dist/
 build/
+public/
 
 # Logs
 logs
@@ -30,3 +31,6 @@ yarn-error.log*
 # OS generated files
 .DS_Store
 Thumbs.db
+
+.vercel
+vercel.json
